Added code_climate to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_install:
 - "echo \"module.exports=function(grunt){grunt.initConfig({jasmine:{src:'src/**/*.js',options:{specs:'spec/**/*.js'}}});grunt.loadNpmTasks('grunt-contrib-jasmine');grunt.registerTask('default',['jasmine']);};\" > Gruntfile.js"
 script:
 - "grunt"
+
+addons:
+  code_climate:
+    repo_token: cd5f3133f76e0450d6404d1f5c50db9792e11dfe7023c6cb2cc88a4d0558a8b2
