--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ before_install:
 - "npm install grunt-cli"
 - "npm install grunt"
 - "npm install grunt-contrib-jasmine"
-- "echo \"module.exports=function(grunt){grunt.initConfig({jasmine:{src:'models/*.js',options:{specs:'spec/*.js'}}});grunt.loadNpmTasks('grunt-contrib-jasmine');grunt.registerTask('default',['jasmine']);};\" > Gruntfile.js"
+
 script:
 - "grunt"
+after_script:
+  - codeclimate < ./lcov.info
 
 addons:
   code_climate:
