--- a/package.json
+++ b/package.json
@@ -19,5 +19,16 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.3"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-istanbul": "^0.5.0",
+    "grunt-template-jasmine-istanbul": "^0.3.3",
+    "install": "^0.1.8",
+    "karma": "^0.12.31",
+    "npm": "^2.8.4"
   }
 }
