--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 - "npm install grunt-cli"
 - "npm install grunt"
 - "npm install grunt-contrib-jasmine"
-- "npm install -g codeclimate-test-reporter"
+- "npm install codeclimate-test-reporter"
 
 script:
 - "grunt"
