--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: node_js
 node_js:
 - "0.12"
-before_install:
-- "npm install grunt-cli"
-- "npm install grunt"
-- "npm install grunt-contrib-jasmine"
-- "npm install codeclimate-test-reporter"
+
+before_script:
+- npm install grunt-cli
+- npm install grunt
+- npm install grunt-contrib-jasmine
+- npm install codeclimate-test-reporter
 
 script:
-- "grunt"
+- grunt
+
 after_script:
   - codeclimate < lcov.info
 
