--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.12.3"
   },
   "devDependencies": {
+    "codeclimate-test-reporter": "0.0.4",
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.2",
