--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
 - "0.12"
 
+before_install:
+  - "npm install -g grunt-cli"
+
 before_script:
   - npm install bower
   - bower install
