--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-istanbul": "^0.5.0",
+    "grunt-linter": "^0.3.3",
     "grunt-template-jasmine-istanbul": "^0.3.3",
     "install": "^0.1.8",
     "karma": "^0.12.31",
